[4/25] 프로필 이미지 클릭시 드롭다운 적용

--- a/html/join.html
+++ b/html/join.html
@@ -35,7 +35,7 @@
       2. css 변경한다.
       3. js로 프로필 이미지 업로더 기능 구현 -->
 
-      <form class="info-form">
+      <form class="info-form" action="/users" method="post">
         <div class="title">이메일*</div>
         <input
           class="email-input"
