--- a/html/post-read.html
+++ b/html/post-read.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="/css/post-read.css" />
     <link rel="stylesheet" href="/css/header.css" />
     <link rel="stylesheet" href="/css/modal.css" />
+    <link rel="stylesheet" href="/css/drop.css">
     <title>post-read</title>
   </head>
   <body>
@@ -20,6 +21,13 @@
           src="/img/header-img.png"
           alt="제목 없는 아트 워크 2"
         />
+        <div class="dropdown">
+          <div class="dropdown-wrap">
+            <a href="/html/info-edit.html">회원정보수정</a>
+            <a href="/html/pw-edit.html">비밀번호수정</a>
+            <a href="/html/login.html">로그아웃</a>
+          </div>
+        </div>
       </div>
     </header>
 
