--- a/html/post-cor.html
+++ b/html/post-cor.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/post-cor.css" />
     <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/drop.css" />
     <title>post-cor</title>
   </head>
   <body>
@@ -15,9 +16,17 @@
         <div class="title">아무 말 대잔치</div>
         <img
           class="img"
+          id="header-img"
           src="/img/header-img.png"
           alt="제목 없는 아트 워크 2"
         />
+        <div class="dropdown">
+          <div class="dropdown-wrap">
+            <a href="/html/info-edit.html">회원정보수정</a>
+            <a href="/html/pw-edit.html">비밀번호수정</a>
+            <a href="/html/login.html">로그아웃</a>
+          </div>
+        </div>
       </div>
     </header>
 
