--- a/html/pw-edit.html
+++ b/html/pw-edit.html
@@ -1,10 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="kr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/css/pw-edit.css" />
     <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/drop.css" />
 
     <title>passwords edit</title>
   </head>
@@ -16,9 +17,17 @@
         <div class="title">아무 말 대잔치</div>
         <img
           class="img"
+          id="header-img"
           src="/img/header-img.png"
           alt="제목 없는 아트 워크 2"
         />
+        <div class="dropdown">
+          <div class="dropdown-wrap">
+            <a href="/html/info-edit.html">회원정보수정</a>
+            <a href="/html/pw-edit.html">비밀번호수정</a>
+            <a href="/html/login.html">로그아웃</a>
+          </div>
+        </div>
       </div>
     </header>
 
@@ -50,5 +59,6 @@
 
       <button class="pw-edit-bnt">수정하기</button>
     </section>
+    <script src="/pw-edit.js"></script>
   </body>
 </html>
