로그인한 유저 프로필 사진 불러오기 기능 구현

--- a/frontserver/public/html/post-list.html
+++ b/frontserver/public/html/post-list.html
@@ -17,8 +17,8 @@
         <img
           class="img"
           id="header-img"
-          src="/img/header-img.png"
-          alt="제목 없는 아트 워크 2"
+          src=""
+          alt="유저 프로필"
         />
         <div class="dropdown">
           <div class="dropdown-wrap">
