빈 댓글 등록 오류, 본문 이미지 없을 시 alt 표시 하지 않게 하기

--- a/frontserver/public/html/post-read.html
+++ b/frontserver/public/html/post-read.html
@@ -81,7 +81,9 @@
           placeholder="댓글을 남겨주세요!"
         />
         <hr />
-        <button class="reply-bnt" id="cmt-bnt">댓글 등록</button>
+        <button class="reply-bnt" id="cmt-bnt" disabled="false">
+          댓글 등록
+        </button>
       </form>
 
       <!-- 댓글 내용 -->
